--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,65 @@
 {
     "name": "micro/plugin-serializer",
     "description": "Micro Framework: Serializer plugin",
-    "type": "library",
-    "version": "0.1",
     "license": "MIT",
+    "type": "micro-plugin",
+    "authors": [
+        {
+            "name": "Stanislau Komar",
+            "email": "stanislau_komar@epam.com"
+        },
+        {
+            "name": "Oleksii Bulba",
+            "email": "oleksii_bulba@epam.com"
+        }
+    ],
+    "require": {
+        "micro/kernel": "^1.6"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "^2.29",
+        "friendsofphp/php-cs-fixer": "^3.13",
+        "micro/kernel-app": "^1.6",
+        "phpstan/phpstan": "^1.9",
+        "phpunit/php-code-coverage": "^9.2",
+        "phpunit/phpunit": "^9.5",
+        "vimeo/psalm": "^5.4"
+    },
+    "suggest": {
+        "micro/plugin-serializer-symfony": "Symfony serializer provider for Micro PHP Framework"
+    },
     "autoload": {
         "psr-4": {
             "Micro\\Plugin\\Serializer\\": "src/"
         }
     },
-    "authors": [
-        {
-            "name": "Stanislau.Komar",
-            "email": "stanislau_komar@epam.com"
+    "autoload-dev": {
+        "psr-4": {
+            "Micro\\Plugin\\Serializer\\Test\\": "tests/"
         }
-    ],
-    "require": {
-        "php": ">=8.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        }
+    },
+    "scripts": {
+        "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-text",
+        "php-cs-fix": "PHP_CS_FIXER_IGNORE_ENV=1 ./vendor/bin/php-cs-fixer fix --verbose --using-cache=no",
+        "php-cs-try": "PHP_CS_FIXER_IGNORE_ENV=1 ./vendor/bin/php-cs-fixer fix --verbose --dry-run --using-cache=no",
+        "phpstan": "./vendor/bin/phpstan analyze --no-progress",
+        "phpunit": "./vendor/bin/phpunit",
+        "psalm": "./vendor/bin/psalm --no-progress --show-info=true",
+        "statics": [
+            "@phpstan",
+            "@psalm",
+            "@php-cs-try"
+        ],
+        "test": [
+            "@statics",
+            "composer validate --strict",
+            "composer normalize --dry-run",
+            "@coverage"
+        ]
     }
 }
